--- a/customview/src/main/res/layout/activity_main.xml
+++ b/customview/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.chenqiao.customview.AvatarView
-        android:background="@android:color/darker_gray"
+    <com.chenqiao.customview.RoundImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
