--- a/customview/src/main/res/layout/activity_main.xml
+++ b/customview/src/main/res/layout/activity_main.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.chenqiao.customview.RoundImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+    <com.chenqiao.customview.XferModeView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
